--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     },
     "browser_action": {
         "default_title": "CookieJar",
-        "default_icon": "src/icons/default.png"
+        "default_icon": "src/icons/48.png"
     },
     "background": {
         "scripts": [
