--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "CookieJar",
     "version": "2.3.0",
     "author": "Kalpaj Agrawalla",
-    "description": "Provides access to view unlimited premium and non-premium articles.",
+    "description": "Removes article-limit restriction and provides access to view unlimited premium and non-premium articles.",
     "icons": {
         "16": "src/icons/16.png",
         "32": "src/icons/32.png",
@@ -12,7 +12,7 @@
     },
     "browser_action": {
         "default_title": "CookieJar",
-        "default_icon": "src/icons/48.png"
+        "default_icon": "src/icons/default.png"
     },
     "background": {
         "scripts": [
